cabal-version: 3.4
name: herald
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Tom Harding
maintainer: i.am.tom.harding@gmail.com
category: Data
build-type: Simple

library
  build-depends:
    , aeson
    , base
    , containers
    , scientific
    , text
    , vector
  default-language: GHC2021
  exposed-modules:
    Herald.Schema
  ghc-options: -Wall -Wextra -Wunused-packages
  hs-source-dirs: source

test-suite herald
  build-depends:
    , aeson
    , base
    , containers
    , hspec
    , scientific
    , tasty
    , tasty-hspec
    , text
    , vector
  build-tool-depends:
   tasty-discover:tasty-discover
  default-language: GHC2021
  ghc-options: -Wall -Wextra
  hs-source-dirs:
    source
    tests
  main-is: Driver.hs
  other-modules:
    Herald.Schema
    Herald.SchemaTest
  type: exitcode-stdio-1.0
