cabal-version: 3.4
name: herald
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Tom Harding
maintainer: i.am.tom.harding@gmail.com
category: Data
build-type: Simple

common libraries
  build-depends:
    , aeson
    , base
    , containers
    , free
    , mtl
    , lens
    , scientific
    , openapi3
    , text
    , vector

library
  import: libraries
  default-language: GHC2021
  exposed-modules:
    Herald.Schema
    Herald.OpenAPI
  ghc-options: -Wall -Wextra -Wunused-packages
  hs-source-dirs: source

test-suite herald
  import: libraries
  build-depends:
    , hspec
    , tasty
    , tasty-hspec
  build-tool-depends:
   tasty-discover:tasty-discover
  default-language: GHC2021
  ghc-options: -Wall -Wextra
  hs-source-dirs:
    source
    tests
  main-is: Driver.hs
  other-modules:
    Herald.OpenAPI
    Herald.OpenAPITest
    Herald.Schema
    Herald.SchemaTest
  type: exitcode-stdio-1.0
